fix: buffer file name & refactoring settings.py

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -83,7 +83,7 @@
                             <h4 class="card-title">POST</h4>
                             <h6 class="text-muted card-subtitle mb-2">POST script to EXEC</h6>
                             <p class="card-text">Post script to '/execute/'</p>
-                            <a class="card-link" href="#">WEB TESTER</a>
+                            <a class="card-link" href="/execute/front/">WEB TESTER</a>
                         </div>
                     </div>
                 </div>
