--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -65,6 +65,9 @@
                         <div class="card-body">
                             <h4 class="card-title">Script</h4>
                             <h6 class="text-muted card-subtitle mb-2">Write own script</h6>
+                            <h6 class="text-muted card-subtitle mb-2">
+                                Now, support only python3.6
+                            </h6>
                             <p class="card-text left">
                                 def fib(n):<br/>
                                 　　a, b = 0, 1<br/>
@@ -82,7 +85,11 @@
                         <div class="card-body">
                             <h4 class="card-title">POST</h4>
                             <h6 class="text-muted card-subtitle mb-2">POST script to EXEC</h6>
-                            <p class="card-text">Post script to '/execute/'</p>
+                            <h6 class="text-muted card-subtitle mb-2"></h6>
+                            <p class="card-text">
+                                URL: scriptexec.net/execute/script/ <br/>
+                                POST script=[YOUR SCRIPT]
+                            </p>
                             <a class="card-link" href="/execute/front/">WEB TESTER</a>
                         </div>
                     </div>
